--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,21 +1,126 @@
 .search-form {
-  padding-bottom: 42px;
+  padding: 80px 0 0;
+}
+
+.search-form__container {
+  border-radius: 40px;
+  background-color: #2F2F2F;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-form__input {
+  background-color: transparent;
+  border: none;
+  color: #8B8B8B;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 17px;
+  padding: 14px 0 14px 19px;
+}
+
+.search-form__button {
+  background-image: url(../../images/search-form-find-button.svg);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-color: transparent;
+  padding-block: 0;
+  padding-inline: 0;
+  box-sizing: content-box;
+}
+
+.search-form__checkbox-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #424242;
+  margin-bottom: 10px;
+}
+
+.search-form__checkbox {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.search-form__switch {
+  cursor: pointer;
+  width: 36px;
+  height: 26px;
+  background-color: #EBEBEB;
+  display: block;
+  position: relative;
+  margin: 0;
+}
+
+.search-form__slider {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #F5F5F5;
+  border-radius: 34px;
+  transition: 0.3s;
+}
+
+.search-form__checkbox:checked + .search-form__slider {
+  background-color: #2BE080;
+}
+
+.search-form__checkbox:checked + .search-form__slider:before {
+  transform: translateX(16px);
+}
+
+.search-form__checkbox-caption {
+  color: #FFF;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 @media (min-width: 320px) {
   .search-form {
-    padding-top: 80px;
     padding-left: 4px;
     padding-right: 4px;
+  }
+
+  .search-form__button {
+    padding: 6px 6px 6px 0;
+    width: 34px;
+    height: 34px;
+  }
+
+  .search-form__checkbox-area {
+    padding: 43px 0 50px 0;
+    gap: 13px;
+  }
+
+  .search-form__checkbox-caption {
+    font-size: 11px;
   }
 }
 
 @media (min-width: 768px) {
+  .search-form__checkbox-area {
+    padding-top: 41px;
+    gap: 12px;
+  }
 
+  .search-form__checkbox-caption {
+    font-size: 14px;
+  }
 }
 
 @media (min-width: 1280px) {
   .search-form {
-    padding-top: 60px;
+    padding: 60px 0 0;
+  }
+
+  .search-form__checkbox-area {
+    padding: 42px 0 70px 0;
   }
 }
