--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,13 @@
 .header {
   display: flex;
   padding: 0;
-  background-color: #073042;
+  background-color: #202020;
   justify-content: space-between;
   border: none;
+}
+
+.header_blue {
+  background-color: #073042;
 }
 
 .header__auth {
