--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,23 @@
 @import url(./blocks/button/button.css);
 @import url(./blocks/section-title/section-title.css);
 
-@import url(./components/Header/header.css);
-@import url(./components/Promo/promo.css);
-@import url(./components/NavTab/navtab.css);
-@import url(./components/AboutProject/about-project.css);
-@import url(./components/Techs/techs.css);
-@import url(./components/AboutMe/about-me.css);
-@import url(./components/Portfolio/portfolio.css);
-@import url(./components/Footer/footer.css);
+@import url(./components/Header/Header.css);
+@import url(./components/Promo/Promo.css);
+@import url(./components/NavTab/Navtab.css);
+@import url(./components/AboutProject/AboutProject.css);
+@import url(./components/Techs/Techs.css);
+@import url(./components/AboutMe/AboutMe.css);
+@import url(./components/Portfolio/Portfolio.css);
+@import url(./components/Footer/Footer.css);
 @import url(./components/Movies/Movies.css);
 @import url(./components/SearchForm/SearchForm.css);
+@import url(./components/MoviesCardList/MoviesCardList.css);
+@import url(./components/MoviesCard/MoviesCard.css);
+@import url(./components/Register/Register.css);
+@import url(./components/Login/Login.css);
+@import url(./components/FormTemplate/FormTemplate.css);
+@import url(./components/Profile/Profile.css);
+@import url(./components/NotFound/NotFound.css);
 
 /*@import url(./blocks/popup/popup.css);*/
 /*@import url(./blocks/popup/__container/popup__container.css);*/
@@ -33,17 +40,6 @@
 /*@import url(./blocks/popup/__submit-button/_inactive/popup__submit-button_inactive.css);*/
 /*@import url(./blocks/popup/__input-error/_active/popup__input-error_active.css);*/
 /*@import url(./blocks/popup/_confirm-delete/popup_confirm-delete.css);*/
-
-/*@import url(./blocks/form/form.css);*/
-/*@import url(./blocks/form/__input/form__input.css);*/
-/*@import url(./blocks/form/__inputs/form__inputs.css);*/
-/*@import url(./blocks/form/section-title/form__title.css);*/
-/*@import url(./blocks/form/__submit-button/form__submit-button.css);*/
-
-/*@import url(./blocks/register/register.css);*/
-/*@import url(./blocks/register/__redirect-link/register__redirect-link.css);*/
-
-/*@import url(./blocks/login/login.css);*/
 
 /*@import url(./blocks/popup/__registration-icon/popup__registration-icon.css);*/
 /*@import url(./blocks/popup/__container/_centered/popup__container_centered.css);*/
