--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -4,8 +4,9 @@
   justify-content: center;
   align-items: center;
   background-color: #202020;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .form__container {
@@ -154,7 +155,7 @@
   }
 
   .form__template {
-    padding: 0;
+    padding: 56px 0 30px 0;
   }
 
   .form__title {
@@ -178,6 +179,6 @@
 
 @media (min-width: 1280px) {
   .form__template {
-    padding: 70px 0 0;
+    padding: 70px 0;
   }
 }
