--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,11 +1,32 @@
 .movies-card-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.movies-card-list__grid {
   display: grid;
   width: 100%;
   justify-content: center;
 }
 
+.movies-card-list__more-button {
+  border-radius: 6px;
+  background-color: #2F2F2F;
+  width: 100%;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  box-sizing: border-box;
+  color: #FFF;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 @media (min-width: 320px) {
-  .movies-card-list {
+  .movies-card-list__grid {
     grid-template-columns: repeat(1, min-content);
     grid-template-rows: repeat(auto-fit, 1fr);
     padding: 40px 0 26px 0;
@@ -14,7 +35,7 @@
 }
 
 @media (min-width: 768px) {
-  .movies-card-list {
+  .movies-card-list__grid {
     grid-template-columns: repeat(2, min-content);
     grid-template-rows: repeat(auto-fit, 1fr);
     padding: 70px 0 80px 0;
@@ -23,7 +44,7 @@
 }
 
 @media (min-width: 1280px) {
-  .movies-card-list {
+  .movies-card-list__grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     padding: 70px 0 60px 0;
