--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/fonts.css);
-
-@import url(./blocks/body/body.css);
-@import url(./blocks/button/button.css);
-@import url(./blocks/section-title/section-title.css);
-
+@import url(./components/SectionTitle/SectionTitle.css);
+@import url(./components/Navigation/Navigation.css);
 @import url(./components/Header/Header.css);
 @import url(./components/Promo/Promo.css);
 @import url(./components/NavTab/Navtab.css);
 @import url(./components/AboutProject/AboutProject.css);
 @import url(./components/Techs/Techs.css);
+@import url(./components/Body/Body.css);
+@import url(./components/Button/Button.css);
 @import url(./components/AboutMe/AboutMe.css);
 @import url(./components/Portfolio/Portfolio.css);
 @import url(./components/Footer/Footer.css);
@@ -22,25 +21,3 @@
 @import url(./components/FormTemplate/FormTemplate.css);
 @import url(./components/Profile/Profile.css);
 @import url(./components/NotFound/NotFound.css);
-
-/*@import url(./blocks/popup/popup.css);*/
-/*@import url(./blocks/popup/__container/popup__container.css);*/
-/*@import url(./blocks/popup/__occupation/popup__occupation.css);*/
-/*@import url(./blocks/popup/__submit-button/popup__submit-button.css);*/
-/*@import url(./blocks/popup/__close-button/popup__close-button.css);*/
-/*@import url(./blocks/popup/__close-button-image/popup__close-button-image.css);*/
-/*@import url(./blocks/popup/section-title/popup__title.css);*/
-/*@import url(./blocks/popup/_opened/popup_opened.css);*/
-/*@import url(./blocks/popup/__input/popup__input.css);*/
-/*@import url(./blocks/popup/__enlarged-photo/popup__enlarged-photo.css);*/
-/*@import url(./blocks/popup/__image-container/popup__image-container.css);*/
-/*@import url(./blocks/popup/__capture/popup__capture.css);*/
-/*@import url(./blocks/popup/_zoom/popup_zoom.css);*/
-/*@import url(./blocks/popup/__input-error/popup__input-error.css);*/
-/*@import url(./blocks/popup/__submit-button/_inactive/popup__submit-button_inactive.css);*/
-/*@import url(./blocks/popup/__input-error/_active/popup__input-error_active.css);*/
-/*@import url(./blocks/popup/_confirm-delete/popup_confirm-delete.css);*/
-
-/*@import url(./blocks/popup/__registration-icon/popup__registration-icon.css);*/
-/*@import url(./blocks/popup/__container/_centered/popup__container_centered.css);*/
-/*@import url(./blocks/popup/section-title/_centered/popup__title_centered.css);*/
