--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
   background-color: #202020;
   justify-content: space-between;
   border: none;
+  position: relative;
 }
 
 .header__burger-icon {
