--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,13 +1,39 @@
 .navigation {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   height: 100vh;
   background-color: #202020;
-  padding: 0 10px 46px 10px;
+  padding: 20% 10px 46px 10px;
   box-sizing: border-box;
+  width: 100%;
+}
+
+.navigation__overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: all 0.2s ease-in-out;
+  z-index: 2;
+}
+
+.navigation__close-button {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
+
+.navigation__close-icon {
+  width: 22px;
+  height: 22px;
 }
 
 .navigation__buttons {
@@ -17,16 +43,16 @@
   width: 100%;
 }
 
-.navigation__profile-link {
+.navigation__link {
   color: #FFF;
-  font-size: 13px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 12px;
   text-decoration: none;
 }
 
-.navigation__profile-link_active ::before {
+.navigation__link_active ::before {
   text-decoration: underline;
   position: absolute;
   content: "";
@@ -37,7 +63,7 @@
   background-color: #FFF;
 }
 
-.navigation__profile-link:hover {
+.navigation__link:hover {
   opacity: 0.7;
   cursor: pointer;
 }
@@ -46,14 +72,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
-}
-
-.navigation__movies-area {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 24px;
+  height: 100%;
+  width: 100%;
 }
 
 .navigation__profile-icon {
@@ -70,23 +91,37 @@
   margin: 3px 3px 3px 7px;
 }
 
-.navigation__link {
-  color: #FFF;
-  text-align: right;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 18px;
-  text-decoration: none;
-}
-
-.navigation__link:active {
-  font-weight: 500;
+.navigation__links {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
 
 .navigation__profile {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
+
+.navigation__profile-link {
+  color: #FFF;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 12px;
+  text-decoration: none;
+}
+
+@media (min-width: 768px) {
+  .navigation {
+    padding: 20% 90px 90px;
+    box-sizing: border-box;
+    width: 520px;
+  }
+}
+
+
