feat: Navigation is ready

--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -90,7 +90,7 @@
     font-size: 12px;
     line-height: 18px;
     letter-spacing: -0.48px;
-    padding: 22px 154px 0 154px;
+    padding: 22px 0 0;
   }
 
   .techs__heading {
