--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -52,7 +52,11 @@
   text-decoration: none;
 }
 
-.navigation__link_active ::before {
+.navigation__link_active {
+  position: relative;
+}
+
+.navigation__link_active::after {
   text-decoration: underline;
   position: absolute;
   content: "";
@@ -64,7 +68,6 @@
 }
 
 .navigation__link:hover {
-  opacity: 0.7;
   cursor: pointer;
 }
 
