--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -74,7 +74,7 @@
 .form__inputs {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 8px;
   padding: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
@@ -126,10 +126,33 @@
   padding: 15px 0;
   text-align: center;
   color: #FFF;
-  font-size: 12px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+.form__submit-button_disabled {
+  background-color: #F8F8F8;
+  color: #C2C2C2;
+}
+
+.form__input-error {
+  display: block;
+  height: 10px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #EE3465;
+  border: none;
+  width: 100%;
+  padding-top: 10px;
+  visibility: hidden;
+}
+
+.form__input-error_active {
+  visibility: visible;
 }
 
 @media (min-width: 320px) {
