--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -38,6 +38,24 @@
   gap: 16px;
 }
 
+.profile__error {
+  display: block;
+  height: 10px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #EE3465;
+  border: none;
+  width: 100%;
+  padding-top: 10px;
+  visibility: hidden;
+}
+
+.profile__error_active {
+  visibility: visible;
+}
+
 .profile__link {
   color: #FFF;
   text-align: center;
