--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: 79px;
+  padding-top: 59px;
   padding-bottom: 20px;
   text-align: center;
   background-color: #202020;
@@ -33,6 +33,11 @@
 
 .footer__links {
   display: flex;
+  list-style-type: none;
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 
 .footer__link {
@@ -114,5 +119,7 @@
   .footer {
     padding-right: 70px;
     padding-left: 70px;
+    margin: auto;
+    max-width: 1280px;
   }
 }
