--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -5,7 +5,6 @@
   align-items: center;
   background-color: #202020;
   width: 100%;
-  height: 100%;
   box-sizing: border-box;
 }
 
@@ -45,11 +44,17 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.form__bottom-link:hover {
+  opacity: 0.7;
 }
 
 .form__logo {
   width: 38px;
   height: 38px;
+  display: block;
 }
 
 .form__title {
@@ -130,6 +135,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  cursor: pointer;
+}
+
+.form__submit-button:hover {
+  opacity: 0.8;
 }
 
 .form__submit-button_disabled {
@@ -203,5 +213,7 @@
 @media (min-width: 1280px) {
   .form__template {
     padding: 70px 0;
+    max-width: 1280px;
+    margin: auto;
   }
 }
