--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -38,7 +38,7 @@
   line-height: normal;
 }
 
-.not-found__link {
+.not-found__button {
   color: #4285F4;
   text-align: center;
   font-size: 14px;
@@ -49,7 +49,7 @@
   cursor: pointer;
 }
 
-.not-found__link:hover {
+.not-found__button:hover {
   opacity: 0.8;
 }
 
@@ -66,7 +66,7 @@
     font-size: 12px;
   }
 
-  .not-found__link {
+  .not-found__button {
     font-size: 12px;
   }
 }
@@ -84,7 +84,7 @@
     font-size: 16px;
   }
 
-  .not-found__link {
+  .not-found__button {
     font-size: 14px;
   }
 }
