--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -2,6 +2,19 @@
   background-color: #202020;
 }
 
+.portfolio__icon {
+  width: 29px;
+  height: 60px;
+  color: #FFF;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 60px;
+  letter-spacing: -1.2px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 .portfolio__title {
   color: #A0A0A0;
   font-style: normal;
@@ -17,6 +30,7 @@
   margin: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  padding-inline-start: 0;
   padding: 0;
   gap: 20px;
 }
@@ -29,12 +43,16 @@
   text-align: center;
 }
 
+.portfolio__link:hover {
+  opacity: 0.7;
+}
+
 .portfolio__item-text {
   color: #FFF;
   font-style: normal;
   font-weight: 400;
   margin: 0;
-   padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .portfolio__item {
@@ -56,11 +74,6 @@
     line-height: 28px;
     letter-spacing: -0.72px;
   }
-
-  .portfolio__icon {
-    width: 18px;
-    height: 28px;
-  }
 }
 
 @media (min-width: 768px) {
@@ -78,16 +91,13 @@
     line-height: 50px;
     letter-spacing: -1.12px;
   }
-
-  .portfolio__icon {
-    width: 27px;
-    height: 60px;
-  }
 }
 
 @media (min-width: 1280px) {
   .portfolio {
     padding: 0 70px 125px 70px;
+    margin: auto;
+    max-width: 1280px;
   }
 
   .portfolio__item-text {
@@ -96,11 +106,8 @@
     letter-spacing: -1.2px;
   }
 
-  .portfolio__icon {
-    width: 29px;
-  }
-
   .portfolio__item {
     border-bottom: 1px #424242 solid;
+    height: 70px;
   }
 }
