--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -38,7 +38,14 @@
   gap: 16px;
 }
 
-.profile__error {
+.profile__status {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.profile__input-error {
   display: block;
   height: 10px;
   text-decoration: none;
@@ -48,11 +55,11 @@
   color: #EE3465;
   border: none;
   width: 100%;
-  padding-top: 10px;
+  padding-bottom: 20px;
   visibility: hidden;
 }
 
-.profile__error_active {
+.profile__input-error_active {
   visibility: visible;
 }
 
@@ -64,6 +71,10 @@
   font-weight: 400;
   line-height: normal;
   text-decoration: none;
+}
+
+.profile__link:hover {
+  opacity: 0.7;
 }
 
 .profile__link_red {
@@ -90,6 +101,15 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+.profile__save-button:hover {
+  opacity: 0.7;
+}
+
+.profile__save-button_disabled {
+  background-color: #F8F8F8;
+  color: #C2C2C2;
 }
 
 .profile__input {
