--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -15,7 +15,7 @@
   background-color: transparent;
   border: none;
   color: #8B8B8B;
-  font-size: 11px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 17px;
@@ -30,6 +30,10 @@
   padding-block: 0;
   padding-inline: 0;
   box-sizing: content-box;
+}
+
+.search-form__button:hover {
+  opacity: 0.8;
 }
 
 @media (min-width: 320px) {
