--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @import url(./components/AboutProject/AboutProject.css);
 @import url(./components/Techs/Techs.css);
 @import url(./components/Body/Body.css);
+@import url(./components/SavedMovies/SavedMovies.css);
 @import url(./components/Button/Button.css);
 @import url(./components/AboutMe/AboutMe.css);
 @import url(./components/Portfolio/Portfolio.css);
