--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   background-color: #202020;
   width: 100%;
   box-sizing: border-box;
@@ -10,14 +9,14 @@
 
 .form__container {
   display: grid;
-  grid-template-rows: repeat(2, max-content);
+  grid-template-rows: repeat(2, min-content);
   flex-direction: column;
   width: 100%;
   height: 100%;
-  min-height: 435px;
+  min-height: 523px;
   max-width: 396px;
-  align-content: space-between;
   justify-self: center;
+  align-content: space-between;
 }
 
 .form__submit {
@@ -79,7 +78,7 @@
 .form__inputs {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 20px;
   padding: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
@@ -148,7 +147,7 @@
 }
 
 .form__input-error {
-  display: block;
+  display: none;
   height: 10px;
   text-decoration: none;
   font-weight: 400;
@@ -162,12 +161,15 @@
 }
 
 .form__input-error_active {
+  display: block;
   visibility: visible;
 }
 
 @media (min-width: 320px) {
   .form__template {
     padding: 56px 30px 30px;
+    max-width: 260px;
+    margin: auto;
   }
 
   .form__title {
@@ -188,7 +190,9 @@
   }
 
   .form__template {
-    padding: 56px 0 30px 0;
+    padding: 232px 0 232px 0;
+    max-width: 396px;
+    margin: auto;
   }
 
   .form__title {
@@ -212,8 +216,8 @@
 
 @media (min-width: 1280px) {
   .form__template {
-    padding: 70px 0;
-    max-width: 1280px;
+    padding: 70px 0 70px 0;
+    max-width: 396px;
     margin: auto;
   }
 }
