--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -22,8 +22,6 @@
   margin-block-start: 0;
   margin-block-end: 0;
   position: absolute;
-  top: 46%;
-  left: 50%;
   transform: translate(-50%, -50%);
 }
 
@@ -38,6 +36,8 @@
     font-size: 31px;
     line-height: 39px;
     letter-spacing: -1.24px;
+    top: 266px;
+    left: 50%;
   }
 }
 
@@ -52,6 +52,8 @@
     font-size: 50px;
     line-height: 58px;
     letter-spacing: -2px;
+    top: 49%;
+    left: 50%;
   }
 }
 
@@ -62,5 +64,7 @@
 
   .promo__title {
     max-width: 730px;
+    top: 46%;
+    left: 50%;
   }
 }
