--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -19,7 +19,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: 17px;
-  padding: 14px 0 14px 19px;
 }
 
 .search-form__button {
@@ -30,6 +29,8 @@
   padding-block: 0;
   padding-inline: 0;
   box-sizing: content-box;
+  width: 34px;
+  height: 34px;
 }
 
 .search-form__button:hover {
@@ -44,13 +45,36 @@
 
   .search-form__button {
     padding: 6px 6px 6px 0;
-    width: 34px;
-    height: 34px;
+  }
+
+  .search-form__input {
+    font-size: 11px;
+  }
+}
+
+@media (min-width: 768px) {
+  .search-form {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .search-form__button {
+    padding: 2px 6px 6px 0;
+  }
+
+  .search-form__input {
+    color: #8B8B8B;
+    font-size: 13px;
+    padding: 14px 0 15px 22px;
   }
 }
 
 @media (min-width: 1280px) {
   .search-form {
     padding: 60px 0 0;
+  }
+
+  .search-form__input {
+    padding: 14px 0 14px 19px;
   }
 }
