--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -31,7 +31,6 @@
 .techs__item {
   border-radius: 10px;
   background-color: #303030;
-  /*padding: 21px 16px;*/
   display: flex;
   width: 100%;
   align-items: center;
@@ -69,7 +68,7 @@
   }
 
   .techs__heading {
-    padding-top: 80px;
+    padding-top: 60px;
     font-size: 30px;
     letter-spacing: -1.2px;
     line-height: normal;
@@ -77,7 +76,8 @@
 
   .techs__list {
     padding: 50px 71px 0 71px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 84px);
+    grid-template-rows: repeat(4, 57px);
     justify-items: flex-start;
   }
 }
@@ -92,6 +92,7 @@
     line-height: 18px;
     letter-spacing: -0.48px;
     padding: 22px 0 0;
+    max-width: 460px;
   }
 
   .techs__heading {
@@ -102,8 +103,8 @@
 
   .techs__list {
     padding: 83px 60px 0 60px;
-    grid-template-rows: repeat(1, 60px);
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(7, 84px);
+    grid-template-rows: repeat(1, 57px);
     justify-items: center;
   }
 }
@@ -128,6 +129,7 @@
 
   .techs__list {
     padding: 100px 0 0 0;
+    grid-template-rows: repeat(1, 60px);
     grid-template-columns: repeat(7, 90px);
   }
 
