--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -69,11 +69,11 @@
 
   .footer__credentials {
     flex-direction: column-reverse;
-    padding-top: 30px;
+    padding-top: 29px;
   }
 
   .footer__links {
-    gap: 12px;
+    gap: 8px;
     flex-direction: column;
     padding-bottom: 30px;
   }
@@ -85,6 +85,7 @@
 
 @media (min-width: 768px) {
   .footer {
+    padding-top: 80px;
     padding-right: 30px;
     padding-left: 30px;
   }
@@ -117,10 +118,11 @@
 
 @media (min-width: 1280px) {
   .footer {
-    padding-top: 79px;
+    padding-top: 77px;
     padding-right: 70px;
     padding-left: 70px;
     margin: auto;
     max-width: 1280px;
+    box-sizing: border-box;
   }
 }
