--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -1,7 +1,6 @@
-.form__template {
+.form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   background-color: #202020;
   width: 100%;
   box-sizing: border-box;
@@ -33,6 +32,8 @@
   font-weight: 400;
   line-height: normal;
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .form__bottom-link {
@@ -78,7 +79,7 @@
 .form__inputs {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 21px;
   padding: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
@@ -113,6 +114,7 @@
 
 .form__input:focus {
   outline: none;
+  border: 1px solid #3DDC84;
 }
 
 .form__input-label {
@@ -130,7 +132,6 @@
   padding: 15px 0;
   text-align: center;
   color: #FFF;
-  font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -166,10 +167,21 @@
 }
 
 @media (min-width: 320px) {
-  .form__template {
+  .form {
     padding: 56px 30px 30px;
-    max-width: 260px;
-    margin: auto;
+    align-items: center;
+  }
+
+  .form__submit {
+    gap: 1px;
+  }
+
+  .form__container {
+    min-height: 656px;
+  }
+
+  .form__submit-button {
+    font-size: 12px;
   }
 
   .form__title {
@@ -185,14 +197,10 @@
 
 @media (min-width: 768px) {
   .form {
-    width: 396px;
-    height: 560px;
-  }
-
-  .form__template {
     padding: 232px 0 232px 0;
     max-width: 396px;
     margin: auto;
+    align-items: normal;
   }
 
   .form__title {
@@ -205,6 +213,15 @@
     margin-top: 16px;
   }
 
+  .form__container {
+    min-height: 523px;
+  }
+
+  .form__submit-button {
+    font-size: 14px;
+    padding: 14px 0;
+  }
+
   .form__bottom-text {
     font-size: 14px;
   }
@@ -215,7 +232,7 @@
 }
 
 @media (min-width: 1280px) {
-  .form__template {
+  .form {
     padding: 70px 0 70px 0;
     max-width: 396px;
     margin: auto;
