--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,12 +11,9 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  max-width: 1280px;
 }
 
 .header__burger-icon {
-  width: 44px;
-  height: 44px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -129,17 +126,38 @@
   .header {
     padding: 0 14px;
   }
+
+  .header__burger-icon {
+    width: 38px;
+    height: 40px;
+  }
 }
 
 @media (min-width: 768px) {
   .header {
     padding: 0 30px;
   }
+
+  .header__burger-icon {
+    width: 44px;
+    height: 44px;
+  }
 }
 
 @media (min-width: 1280px) {
   .header {
-   padding: 0 70px;
+    padding: 0;
+  }
+
+  .header__movies-area {
+    display: flex;
+  }
+
+  .header__content {
+    max-width: 1280px;
+    box-sizing: border-box;
+    margin: auto;
+    padding: 0 70px;
   }
 
   .header__burger-button {
@@ -148,5 +166,6 @@
 
   .header__buttons {
     display: flex;
+    justify-content: space-between;
   }
 }
