--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -21,5 +21,8 @@
   .movies {
     padding-right: 70px;
     padding-left: 70px;
+    max-width: 1280px;
+    margin: auto;
+    box-sizing: border-box;
   }
 }
