--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   background-color: #222;
   border-radius: 6px;
+  box-sizing: border-box;
   width: 100%;
 }
 
@@ -22,10 +23,8 @@
 
 .movies-card__title {
   color: #FFF;
-  font-size: 13px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
   margin-block-start: 0;
   margin-block-end: 0;
 }
@@ -34,7 +33,6 @@
   margin-block-start: 0;
   margin-block-end: 0;
   color: #8B8B8B;
-  font-size: 10px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -74,10 +72,11 @@
 @media (min-width: 320px) {
   .movies-card__title {
     font-size: 12px;
+    line-height: 18px;
   }
 
   .movies-card__intro {
-    padding: 9px 10px 14px 14px;
+    padding: 6px 10px 5px 14px;
   }
 
   .movies-card__like-button {
@@ -89,25 +88,32 @@
   .movies-card__duration {
     font-size: 10px;
     padding: 0 10px 14px 14px;
+    line-height: 15px;
+  }
+
+  .movies-card__image {
+    min-height: 168px;
   }
 }
 
 @media (min-width: 768px) {
   .movies-card__title {
     font-size: 13px;
+    line-height: 19px;
   }
 
   .movies-card__intro {
-    padding: 15px 15px;
+    padding: 8px 14px 7px 14px;
   }
 
   .movies-card__duration {
     font-size: 11px;
-    padding: 0 10px 16px 16px;
+    padding: 0 14px 14px;
+    line-height: normal;
   }
 
   .movies-card__image {
-    min-width: 340px;
+    height: 190px;
   }
 }
 
