--- a/src/components/NavTab/Navtab.css
+++ b/src/components/NavTab/Navtab.css
@@ -28,7 +28,7 @@
 @media (min-width: 320px) {
   .navtab {
     gap: 24px;
-    padding: 25px 0;
+    padding: 23px 0 25px 0;
   }
 
   .navtab__link {
@@ -54,3 +54,5 @@
     font-size: 13px;
   }
 }
+
+
