--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -4,10 +4,8 @@
 
 .portfolio__icon {
   color: #FFF;
-  font-size: 30px;
   font-style: normal;
   font-weight: 400;
-  line-height: 60px;
   letter-spacing: -1.2px;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -61,7 +59,7 @@
   }
 
   .portfolio__title {
-    padding: 0 0 41px 0;
+    padding: 0 0 39px 0;
     font-size: 14px;
   }
 
@@ -79,13 +77,13 @@
   .portfolio__icon {
     font-size: 18px;
     line-height: 28px;
-    padding-bottom: 17px;
+    padding-bottom: 18px;
   }
 }
 
 @media (min-width: 768px) {
   .portfolio {
-    padding: 0 50px 90px 50px;
+    padding: 0 50px 92px 50px;
   }
 
   .portfolio__title {
@@ -97,26 +95,27 @@
     font-size: 28px;
     line-height: 50px;
     letter-spacing: -1.12px;
-    padding-bottom: 19px;
-    width: 29px;
-    height: 60px;
+    padding-bottom: 18px;
   }
 
   .portfolio__list {
-    gap: 18px;
+    gap: 20px;
+    padding-top: 10px;
   }
 
   .portfolio__icon {
-    width: 27px;
-    height: 70px;
+    font-size: 28px;
+    line-height: 60px;
+    padding-bottom: 8px;
   }
 }
 
 @media (min-width: 1280px) {
   .portfolio {
-    padding: 0 70px 125px 70px;
+    padding: 0 70px 105px 70px;
     margin: auto;
     max-width: 1280px;
+    box-sizing: border-box;
   }
 
   .portfolio__item-text {
@@ -133,5 +132,10 @@
 
   .portfolio__list {
     gap: 20px;
+    padding-top: 10px;
+  }
+
+  .portfolio__icon {
+    font-size: 30px;
   }
 }
