--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -34,6 +34,9 @@
   .saved-movies {
     padding-right: 70px;
     padding-left: 70px;
+    max-width: 1280px;
+    margin: auto;
+    box-sizing: border-box;
   }
 
   .saved-movies__divider {
