--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -99,6 +99,7 @@
     font-size: 50px;
     line-height: 58px;
     letter-spacing: -2px;
+    padding-top: 80px;
   }
 
   .techs__list {
@@ -111,12 +112,14 @@
 
 @media (min-width: 1280px) {
   .techs {
-    padding: 0 70px 100px 70px;
+    padding: 0;
   }
 
   .techs__content {
-    margin: 0 auto;
     max-width: 1280px;
+    padding: 0 70px 100px 70px;
+    margin: auto;
+    box-sizing: border-box;
   }
 
   .techs__caption {
