--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,6 +5,7 @@
   border-radius: 6px;
   box-sizing: border-box;
   width: 100%;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.08);
 }
 
 .movies-card :hover {
