--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -62,8 +62,8 @@
 
 @media (min-width: 1280px) {
   .movies-card-list__grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(3, 364px);
+    grid-template-rows: repeat(auto-fit, 281px);
     padding: 70px 0 60px 0;
     column-gap: 24px;
     row-gap: 37px;
