fix: grid changed

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -128,15 +128,11 @@
 
 @media (min-width: 1280px) {
   .movies-card__intro {
-    padding: 10px 16px;
+    padding: 9px 16px 10px 16px;
   }
 
   .movies-card__image {
     height: 203px;
-  }
-
-  .movies-card__title {
-    line-height: normal;
   }
 
   .movies-card__duration {
