--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -122,6 +122,15 @@
   visibility: visible;
 }
 
+.header__signup {
+  color: #FFF;
+  text-align: right;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  text-decoration: none;
+}
+
 @media (min-width: 320px) {
   .header {
     padding: 0 14px;
@@ -130,6 +139,19 @@
   .header__burger-icon {
     width: 38px;
     height: 40px;
+  }
+
+  .header__login-button {
+    padding: 5px 12px;
+    font-size: 10px;
+  }
+
+  .header__auth {
+    gap: 14px;
+  }
+
+  .header__signup {
+    font-size: 10px;
   }
 }
 
@@ -141,6 +163,19 @@
   .header__burger-icon {
     width: 44px;
     height: 44px;
+  }
+
+  .header__login-button {
+    padding: 8px 20px;
+    font-size: 12px;
+  }
+
+  .header__auth {
+    gap: 30px;
+  }
+
+  .header__signup {
+    font-size: 12px;
   }
 }
 
