--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -63,6 +63,19 @@
   visibility: visible;
 }
 
+.profile__success-message {
+  animation: fadeOut 5s ease-in-out forwards;
+  color: #2BE080;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 16px;
+  text-align: center;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .profile__link {
   color: #FFF;
   text-align: center;
@@ -158,7 +171,7 @@
     font-size: 13px;
   }
 
-   .profile__top {
+  .profile__top {
     min-height: 272px;
   }
 }
@@ -176,5 +189,15 @@
 
   .profile__top {
     min-height: 282px;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
   }
 }
