--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -11,6 +11,18 @@
   align-items: center;
 }
 
+.search-form__error {
+  color: #FFF;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 30px 0;
+}
+
 .search-form__input {
   background-color: transparent;
   border: none;
