--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -137,6 +137,18 @@
   cursor: pointer;
 }
 
+.form__error {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #EE3465;
+  border: none;
+  width: 100%;
+  padding-top: 10px;
+  text-align: center;
+}
+
 .form__submit-button:hover {
   opacity: 0.8;
 }
