--- a/src/components/FormTemplate/FormTemplate.css
+++ b/src/components/FormTemplate/FormTemplate.css
@@ -145,8 +145,10 @@
   color: #EE3465;
   border: none;
   width: 100%;
-  padding-top: 10px;
+  padding: 0;
   text-align: center;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .form__submit-button:hover {
