--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -120,6 +120,20 @@
   opacity: 0.7;
 }
 
+.profile__error-message {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #EE3465;
+  border: none;
+  width: 100%;
+  padding: 0;
+  text-align: center;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 .profile__save-button_disabled {
   background-color: #F8F8F8;
   color: #C2C2C2;
